add errors to logs endpoint
